--- a/public/commands.html
+++ b/public/commands.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Commands - QUICK MAXXX</title>
+    <title>Commands - ForensicByte | Security™X</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -944,7 +944,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <i class="fab fa-discord"></i>
-                <span>QUICK MAXXX</span>
+                <span>ForensicByte | Security™X</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="/" class="nav-link">Home</a></li>
@@ -970,7 +970,7 @@
         <div class="container">
             <div class="commands-header">
                 <h1>Bot Commands</h1>
-                <p>Explore all the powerful commands available in QUICK MAXXX. From moderation to entertainment, we've got everything you need.</p>
+                <p>Explore all the powerful commands available in ForensicByte | Security™X. From moderation to entertainment, we've got everything you need.</p>
             </div>
 
             <!-- Search Box -->
@@ -1258,7 +1258,7 @@
                             <i class="fas fa-book"></i>
                         </div>
                         <h3>Documentation</h3>
-                        <p>Comprehensive guides and tutorials to help you set up and configure QUICK MAXXX for your server.</p>
+                        <p>Comprehensive guides and tutorials to help you set up and configure ForensicByte | Security™X for your server.</p>
                         <a href="#" class="contact-link">Read Documentation</a>
                     </div>
                     <div class="contact-card">
@@ -1311,7 +1311,7 @@
                 <div class="footer-section">
                     <div class="footer-logo">
                         <i class="fab fa-discord"></i>
-                        <span>QUICK MAXXX</span>
+                        <span>ForensicByte | Security™X</span>
                     </div>
                     <p>The ultimate Discord bot for modern servers. Built with love and powered by cutting-edge technology.</p>
                     <div class="social-links">
@@ -1363,7 +1363,7 @@
             </div>
             <div class="footer-bottom">
                 <div class="footer-bottom-content">
-                    <p>&copy; 2024 QUICK MAXXX. All rights reserved.</p>
+                    <p>&copy; 2024 ForensicByte | Security™X. All rights reserved.</p>
                     <div class="footer-bottom-links">
                         <a href="#contact">Contact</a>
                     </div>
