--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QUICK MAXXX - Professional Discord Bot</title>
+    <title>ForensicByte | Security™X - Professional Discord Bot</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -507,7 +507,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <i class="fab fa-discord"></i>
-                <span>QUICK MAXXX</span>
+                <span>ForensicByte | Security™X</span>
             </div>
             <ul class="nav-menu">
                 <li><a href="/" class="nav-link">Home</a></li>
@@ -537,7 +537,7 @@
                 </h1>
                 <p class="hero-description">
                     Enhance your Discord server with powerful moderation tools, fun games, music, and much more. 
-                    QUICK MAXXX is designed to make your server management effortless and entertaining.
+                    ForensicByte | Security™X is designed to make your server management effortless and entertaining.
                 </p>
                 <div class="hero-buttons">
                     <a href="https://discord.com/oauth2/authorize?client_id=1386396859261779988&permissions=8&integration_type=0&scope=bot&permissions=8" class="btn btn-primary btn-large">
@@ -575,8 +575,8 @@
     <section id="features" class="features">
         <div class="container">
             <div class="section-header">
-                <h2>Why Choose QUICK MAXXX?</h2>
-                <p>Discover the powerful features that make QUICK MAXXX the perfect choice for your Discord server</p>
+                <h2>Why Choose ForensicByte | Security™X?</h2>
+                <p>Discover the powerful features that make ForensicByte | Security™X the perfect choice for your Discord server</p>
             </div>
             <div class="features-grid">
                 <div class="feature-card">
@@ -754,10 +754,10 @@
         <div class="container">
             <div class="cta-content">
                 <h2>Ready to Transform Your Discord Server?</h2>
-                <p>Join thousands of servers already using QUICK MAXXX to enhance their Discord experience.</p>
+                <p>Join thousands of servers already using ForensicByte | Security™X to enhance their Discord experience.</p>
                 <a href="https://discord.com/oauth2/authorize?client_id=1386396859261779988&permissions=8&integration_type=0&scope=bot&permissions=8" class="btn btn-primary btn-large">
                     <i class="fab fa-discord"></i>
-                    Add QUICK MAXXX Now
+                    Add ForensicByte | Security™X Now
                 </a>
             </div>
         </div>
@@ -785,7 +785,7 @@
                             <i class="fas fa-book"></i>
                         </div>
                         <h3>Documentation</h3>
-                        <p>Comprehensive guides and tutorials to help you set up and configure QUICK MAXXX for your server.</p>
+                        <p>Comprehensive guides and tutorials to help you set up and configure ForensicByte | Security™X for your server.</p>
                         <a href="#" class="contact-link">Read Documentation</a>
                     </div>
                     <div class="contact-card">
@@ -838,7 +838,7 @@
                 <div class="footer-section">
                     <div class="footer-logo">
                         <i class="fab fa-discord"></i>
-                        <span>QUICK MAXXX</span>
+                        <span>ForensicByte | Security™X</span>
                     </div>
                     <p>The ultimate Discord bot for modern servers. Built with love and powered by cutting-edge technology.</p>
                     <div class="social-links">
@@ -890,7 +890,7 @@
             </div>
             <div class="footer-bottom">
                 <div class="footer-bottom-content">
-                    <p>&copy; 2024 QUICK MAXXX. All rights reserved.</p>
+                    <p>&copy; 2024 ForensicByte | Security™X. All rights reserved.</p>
                     <div class="footer-bottom-links">
                         <a href="#contact">Contact</a>
                     </div>
