--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login - QUICK MAXXX</title>
+    <title>Login - ForensicByte | Security™X</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -93,7 +93,7 @@
             <div class="login-header">
                 <div class="nav-logo">
                     <i class="fab fa-discord"></i>
-                    <span>QUICK MAXXX</span>
+                    <span>ForensicByte | Security™X</span>
                 </div>
                 <h1>Dashboard Login</h1>
                 <p>Please log in with Discord to continue.</p>
