--- a/public/index.html
+++ b/public/index.html
@@ -518,7 +518,7 @@
             </ul>
             <div class="nav-buttons">
                 <a href="/dashboard" class="btn btn-secondary">Dashboard</a>
-                <a href="https://discord.com/oauth2/authorize?client_id=1386396859261779988&permissions=8&integration_type=0&scope=bot&permissions=8" class="btn btn-primary">Add to Discord</a>
+                <a href="https://discord.com/oauth2/authorize?client_id=1393621951909462086&permissions=8&integration_type=0&scope=bot" class="btn btn-primary">Add to Discord</a>
             </div>
             <div class="hamburger">
                 <span></span>
@@ -540,7 +540,7 @@
                     ForensicByte | Security™X is designed to make your server management effortless and entertaining.
                 </p>
                 <div class="hero-buttons">
-                    <a href="https://discord.com/oauth2/authorize?client_id=1386396859261779988&permissions=8&integration_type=0&scope=bot&permissions=8" class="btn btn-primary btn-large">
+                    <a href="https://discord.com/oauth2/authorize?client_id=1393621951909462086&permissions=8&integration_type=0&scope=bot" class="btn btn-primary btn-large">
                         <i class="fab fa-discord"></i>
                         Add to Discord
                     </a>
@@ -755,7 +755,7 @@
             <div class="cta-content">
                 <h2>Ready to Transform Your Discord Server?</h2>
                 <p>Join thousands of servers already using ForensicByte | Security™X to enhance their Discord experience.</p>
-                <a href="https://discord.com/oauth2/authorize?client_id=1386396859261779988&permissions=8&integration_type=0&scope=bot&permissions=8" class="btn btn-primary btn-large">
+                <a href="https://discord.com/oauth2/authorize?client_id=1393621951909462086&permissions=8&integration_type=0&scope=bot" class="btn btn-primary btn-large">
                     <i class="fab fa-discord"></i>
                     Add ForensicByte | Security™X Now
                 </a>
